--- a/plantilla-barberia/index.html
+++ b/plantilla-barberia/index.html
@@ -13,210 +13,220 @@
 
 <body>
 
-  <header>
+
+  <nav>
     <nav>
-      <ul class="menu">
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#precios">Precios</a></li>
-        <li><a href="#barberos">Barberos</a></li>
-        <li><a href="#contacto">Contacto</a></li>         
-      </ul>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/PTP9YSKB49TKA" target="_blank"
-            role="button" rel="noopener noreferrer">Comprar plantilla</a>
+      <div class="nav-container">
+        <div class="logo">Barbería Barber</div>
+
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <ul class="menu" id="menu">
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#precios">Precios</a></li>
+          <li><a href="#barberos">Barberos</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/UXG6NGJK3Y76J" target="_blank"
+              rel="noopener noreferrer">Comprar plantilla</a></li>
+        </ul>
+
+        <div class="close-btn" id="closeBtn">&times;</div>
       </div>
     </nav>
 
-    <div class="hero-text">
-      <h1>Barbería Barber</h1>
-      <p>Estudio de barbería para hombres con talento</p>
-      <!--<a href="#" class="cta-button">Cita online</a>-->
-    </div>
-  </header>
-
-
-  <section class="servicios" id="servicios">
-    <h2>Nuestros Servicios</h2>
-    <div class="linea"></div>
-
-    <div class="contenedor-servicios">
-      <div class="servicio">
-        <i class="fas fa-scissors"></i>
-        <h3>Peinado</h3>
-        <p>Tu elección de peinado es fundamental en el camino.</p>
-        <span>A PARTIR DE $35</span>
-      </div>
-
-      <div class="servicio">
-        <i class="fa-solid fa-spray-can-sparkles"></i>
-        <h3>Afeitado</h3>
-        <p>Tu elección de peinado es fundamental en el camino.</p>
-        <span>A PARTIR DE $25</span>
-      </div>
-
-      <div class="servicio">
-        <i class="fas fa-wind"></i>
-        <h3>Estilización</h3>
-        <p>Tu elección de peinado es fundamental en el camino.</p>
-        <span>A PARTIR DE $40</span>
-      </div>
-
-      <div class="servicio">
-        <i class="fas fa-cut"></i>
-        <h3>Adornos</h3>
-        <p>Tu elección de peinado es fundamental en el camino.</p>
-        <span>A PARTIR DE $55</span>
-      </div>
-    </div>
-
-    <div class="mensaje-final">
-      <i class="fas fa-mustache"></i>
-      <p>Nos dedicamos a empoderar a los hombres para que se vean y se sientan fantásticos.</p>
-    </div>
-  </section>
-
-  <section class="precios" id="precios">
-    <h2>Precios flexibles</h2>
-    <div class="linea"></div>
-
-    <div class="grooming">
-      <div class="item">
-        <h3>Peinado tradicional</h3>
-        <p>Lorem ipsum ha sido la industria.</p>
-        <span>$10.00</span>
-      </div>
-      <div class="item">
-        <h3>Estilización de la barba</h3>
-        <p>Lorem ipsum ha sido la industria.</p>
-        <span>$12.00</span>
-      </div>
-    </div>
-
-    <div class="especiales">
-      <div class="columna">
-        <h4>ESPECIALES DE PELUQUERÍA</h4>
-        <div class="especial">
-          <h3>Corte de pelo clásico y lavado</h3>
-          <p>Lorem ipsum ha sido la industria.</p>
-          <span>$10.00</span>
-        </div>
-        <div class="especial">
-          <h3>Arreglar la barba larga</h3>
-          <p>Lorem ipsum ha sido la industria.</p>
-          <span>$08.00</span>
-        </div>
-      </div>
-      <div class="columna">
-        <h4>ESPECIALES DE PELUQUERÍA</h4>
-        <div class="especial">
-          <h3>Recortar la barba larga</h3>
-          <p>Lorem ipsum ha sido la industria.</p>
-          <span>$11.00</span>
-        </div>
-        <div class="especial">
-          <h3>Lavado de barba y cabello</h3>
-          <p>Lorem ipsum ha sido la industria.</p>
-          <span>$10.00</span>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="barberos" id="barberos">
-    <h2>Nuestros Barberos</h2>
-    <div class="linea"></div>
-
-    <div class="equipo">
-      <div class="barbero">
-        <img src="images/david.png" alt="David">
-        <h3>David</h3>
-        <p>Especialista en cortes clásicos y barbas con carácter.</p>
-      </div>
-      <div class="barbero">
-        <img src="images/robert.png" alt="Robert">
-        <h3>Robert</h3>
-        <p>Maestro en afeitados tradicionales y estilo vintage.</p>
-      </div>
-      <div class="barbero">
-        <img src="images/peter.png" alt="Peter">
-        <h3>Peter</h3>
-        <p>Creativo en estilización moderna y detalles únicos.</p>
-      </div>
-      <div class="barbero">
-        <img src="images/james.png" alt="James">
-        <h3>James</h3>
-        <p>Experto en barbería urbana y atención personalizada.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="calculator">
-  
-  <h2>Resumen de Servicios</h2>
-
-    <div class="resumen">
-      <div>
-        <div id="barberia">0</div>
-        <div>BARBERIA</div>
-      </div>
-      <div>
-        <div id="peinados">0</div>
-        <div>PEINADOS</div>
-      </div>
-      <div>
-        <div id="afeitados">0</div>
-        <div>AFEITADOS</div>
-      </div>
-      <div>
-        <div id="estilización">0</div>
-        <div>ESTILIZACIONES</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Aviso de Cookies -->
-   <div id="cookie-banner">
-    <span >
-      Utilizamos cookies para mejorar tu experiencia en nuestro sitio. Al continuar navegando, aceptas nuestra <a
-        href="politica-cookies.html" target="_blank" rel="noopener noreferrer">política de cookies</a> y
-    </span>
-    <span >
-      <a href="politica-privacidad.html" target="_blank" rel="noopener noreferrer">Politica de privacidad</a>.
-    </span>
-    <button onclick="aceptarCookies()">Aceptar</button>
+   <header>
+  <div class="hero-text">
+    <h1>Barbería Barber</h1>
+    <p>Estudio de barbería para hombres con talento</p>
+    <a href="#" class="cta-button">Cita online</a>
   </div>
-  <!-- Footer -->
-  <footer class="footer" id="contacto">
-    <div class="footer-container">
-      <div class="footer-logo">
-        <img src="images/logo.png" alt="Barbería Porto">
+</header>
+
+
+    <section class="servicios" id="servicios">
+      <h2>Nuestros Servicios</h2>
+      <div class="linea"></div>
+
+      <div class="contenedor-servicios">
+        <div class="servicio">
+          <i class="fas fa-scissors"></i>
+          <h3>Peinado</h3>
+          <p>Tu elección de peinado es fundamental en el camino.</p>
+          <span>A PARTIR DE $35</span>
+        </div>
+
+        <div class="servicio">
+          <i class="fa-solid fa-spray-can-sparkles"></i>
+          <h3>Afeitado</h3>
+          <p>Tu elección de peinado es fundamental en el camino.</p>
+          <span>A PARTIR DE $25</span>
+        </div>
+
+        <div class="servicio">
+          <i class="fas fa-wind"></i>
+          <h3>Estilización</h3>
+          <p>Tu elección de peinado es fundamental en el camino.</p>
+          <span>A PARTIR DE $40</span>
+        </div>
+
+        <div class="servicio">
+          <i class="fas fa-cut"></i>
+          <h3>Adornos</h3>
+          <p>Tu elección de peinado es fundamental en el camino.</p>
+          <span>A PARTIR DE $55</span>
+        </div>
       </div>
 
-      <div class="footer-info">
-        <h3>Contacto</h3>
-        <p><i class="fas fa-phone-alt"></i> +34 612 345 678</p>
-        <p><i class="fas fa-map-marker-alt"></i> Calle Mayor 12, Silla, Valencia</p>
-        <p><i class="fas fa-clock"></i> Lunes a Sábado: 10:00 - 20:00</p>
+      <div class="mensaje-final">
+        <i class="fas fa-mustache"></i>
+        <p>Nos dedicamos a empoderar a los hombres para que se vean y se sientan fantásticos.</p>
+      </div>
+    </section>
+
+    <section class="precios" id="precios">
+      <h2>Precios flexibles</h2>
+      <div class="linea"></div>
+
+      <div class="grooming">
+        <div class="item">
+          <h3>Peinado tradicional</h3>
+          <p>Lorem ipsum ha sido la industria.</p>
+          <span>$10.00</span>
+        </div>
+        <div class="item">
+          <h3>Estilización de la barba</h3>
+          <p>Lorem ipsum ha sido la industria.</p>
+          <span>$12.00</span>
+        </div>
       </div>
 
-      <div class="footer-social">
-        <h3>Síguenos</h3>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+      <div class="especiales">
+        <div class="columna">
+          <h4>ESPECIALES DE PELUQUERÍA</h4>
+          <div class="especial">
+            <h3>Corte de pelo clásico y lavado</h3>
+            <p>Lorem ipsum ha sido la industria.</p>
+            <span>$10.00</span>
+          </div>
+          <div class="especial">
+            <h3>Arreglar la barba larga</h3>
+            <p>Lorem ipsum ha sido la industria.</p>
+            <span>$08.00</span>
+          </div>
+        </div>
+        <div class="columna">
+          <h4>ESPECIALES DE PELUQUERÍA</h4>
+          <div class="especial">
+            <h3>Recortar la barba larga</h3>
+            <p>Lorem ipsum ha sido la industria.</p>
+            <span>$11.00</span>
+          </div>
+          <div class="especial">
+            <h3>Lavado de barba y cabello</h3>
+            <p>Lorem ipsum ha sido la industria.</p>
+            <span>$10.00</span>
+          </div>
+        </div>
       </div>
+    </section>
+
+    <section class="barberos" id="barberos">
+      <h2>Nuestros Barberos</h2>
+      <div class="linea"></div>
+
+      <div class="equipo">
+        <div class="barbero">
+          <img src="images/david.png" alt="David">
+          <h3>David</h3>
+          <p>Especialista en cortes clásicos y barbas con carácter.</p>
+        </div>
+        <div class="barbero">
+          <img src="images/robert.png" alt="Robert">
+          <h3>Robert</h3>
+          <p>Maestro en afeitados tradicionales y estilo vintage.</p>
+        </div>
+        <div class="barbero">
+          <img src="images/peter.png" alt="Peter">
+          <h3>Peter</h3>
+          <p>Creativo en estilización moderna y detalles únicos.</p>
+        </div>
+        <div class="barbero">
+          <img src="images/james.png" alt="James">
+          <h3>James</h3>
+          <p>Experto en barbería urbana y atención personalizada.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="calculator">
+
+      <h2>Resumen de Servicios</h2>
+
+      <div class="resumen">
+        <div>
+          <div id="barberia">0</div>
+          <div>BARBERIA</div>
+        </div>
+        <div>
+          <div id="peinados">0</div>
+          <div>PEINADOS</div>
+        </div>
+        <div>
+          <div id="afeitados">0</div>
+          <div>AFEITADOS</div>
+        </div>
+        <div>
+          <div id="estilización">0</div>
+          <div>ESTILIZACIONES</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Aviso de Cookies -->
+    <div id="cookie-banner">
+      <span>
+        Utilizamos cookies para mejorar tu experiencia en nuestro sitio. Al continuar navegando, aceptas nuestra <a
+          href="politica-cookies.html" target="_blank" rel="noopener noreferrer">política de cookies</a> y
+      </span>
+      <span>
+        <a href="politica-privacidad.html" target="_blank" rel="noopener noreferrer">Politica de privacidad</a>.
+      </span>
+      <button onclick="aceptarCookies()">Aceptar</button>
     </div>
-  </footer>
+    <!-- Footer -->
+    <footer class="footer" id="contacto">
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="images/logo.png" alt="Barbería Porto">
+        </div>
 
-  <!-- 💬 Botón flotante WhatsApp -->
-  <a href="https://wa.me/34600000000" target="_blank" class="whatsapp-float" title="Escríbeme por WhatsApp">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" />
-  </a>
+        <div class="footer-info">
+          <h3>Contacto</h3>
+          <p><i class="fas fa-phone-alt"></i> +34 612 345 678</p>
+          <p><i class="fas fa-map-marker-alt"></i> Calle Mayor 12, Silla, Valencia</p>
+          <p><i class="fas fa-clock"></i> Lunes a Sábado: 10:00 - 20:00</p>
+        </div>
 
-  <script src="script.js"></script>
+        <div class="footer-social">
+          <h3>Síguenos</h3>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
+
+    <!-- 💬 Botón flotante WhatsApp -->
+    <a href="https://wa.me/34600000000" target="_blank" class="whatsapp-float" title="Escríbeme por WhatsApp">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" />
+    </a>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
