--- a/plantilla-peluqueria/index.html
+++ b/plantilla-peluqueria/index.html
@@ -14,19 +14,32 @@
 
 <body>
   <!-- Menú de navegación -->
-  <nav>
-    <img src="images/logo.png" alt="Logo Peluquería">
-    <ul>
-      <li><a href="#inicio">Inicio</a></li>
-      <li><a href="#servicios">Servicios</a></li>
-      <li><a href="#galeria">Galería</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-      <li><a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/JAZ8MH5LPTDQQ" target="_blank"
-          role="button" rel="noopener noreferrer">Comprar
-          plantilla</a></li>
-    </ul>
-  </nav>
+ <!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Peluquería</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<nav class="navbar">
+  <div class="logo">
+    <a href="#inicio"><img src="images/logo.png" alt="Logo de la Peluquería" width="120"></a>
+  </div>
+  <ul class="nav-links">
+    <li><a href="#inicio">Inicio</a></li>
+    <li><a href="#servicios">Servicios</a></li>
+    <li><a href="#galeria">Galería</a></li>
+    <li><a href="#contacto">Contacto</a></li>
+    <li><a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/JAZ8MH5LPTDQQ" target="_blank">Comprar plantilla</a></li>
+    <button class="menu-close" aria-label="Cerrar menú">&#10006;</button>
+  </ul>
+  <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
+</nav>
+
+ 
   <!-- cabecera -->
   <header class="header">
     <div class="header-content">
