--- a/plantilla-proyectos/index.html
+++ b/plantilla-proyectos/index.html
@@ -15,17 +15,37 @@
 
 <body>
   <!-- 🧭 Navegación -->
+   <!DOCTYPE html>
+<html lang="es">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Navegación Responsive</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
   <nav>
     <div class="logo">Tu proyecto</div>
+
     <ul class="nav-links">
       <li><a href="#proyectos">Proyectos</a></li>
       <li><a href="#sobreMi">Sobre mí</a></li>
       <li><a href="#habilidades">Habilidades</a></li>
       <li><a href="#redes">Redes sociales</a></li>
-      <li><a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/CV2NQ94A9PV7G" target="_blank"
-          rel="noopener noreferrer" role="button">Comprar
-          plantilla</a></li>
+      <li>
+        <a class="btn" href="https://www.paypal.com/ncp/payment/CV2NQ94A9PV7G" target="_blank"
+          rel="noopener noreferrer">Comprar plantilla</a>
+      </li>
     </ul>
+
+    <!-- Botón hamburguesa -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </nav>
 
   <!-- 🖼️ Cabecera -->
