--- a/plantilla-restaurante/index.html
+++ b/plantilla-restaurante/index.html
@@ -15,16 +15,26 @@
 <body>
 
   <!-- Menú de navegación -->
-  <nav>
-    <ul>
+   <nav>
+    <div class="logo">Tu Proyecto</div>
+    <ul class="nav-links">
       <li><a href="#redes">Redes sociales</a></li>
       <li><a href="#servicios">Servicios</a></li>
       <li><a href="#nosotros">Sobre Nosotros</a></li>
       <li><a href="#contacto">Contacto</a></li>
-      <li><a class="btn btn-primary" href="https://www.paypal.com/ncp/payment/LKEP5UC3UWZRJ" role="button"
-          target="_blank" rel="noopener noreferrer">Comprar
-          plantilla</a></li>
+      <li>
+        <a class="btn" href="https://www.paypal.com/ncp/payment/LKEP5UC3UWZRJ" target="_blank" rel="noopener noreferrer">
+          Comprar plantilla
+        </a>
+      </li>
     </ul>
+
+    <!-- Botón hamburguesa -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </nav>
 
   <!-- Cabecera con video -->
